SVN: merge 2.9->trunk (rev. 7615-8066)
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk@8069 a09ad3ba-1a0f-0410-b1b9-c67202f10d70